--- a/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
+++ b/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D59DAD41-663F-4AD7-9B22-04C2A7D7F9C2}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -125,6 +125,7 @@
     <Compile Include="..\Common\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="RandomValueGen.cs" />
     <Compile Include="SetupDatabase.cs" />
     <Compile Include="TestSetupDatabase.cs" />
     <Compile Include="Vehicle.cs" />
