--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -253,6 +253,7 @@
     </Compile>
     <Compile Include="PropertyLink.cs" />
     <Compile Include="PropRuleDouble.cs" />
+    <Compile Include="PropRuleLong.cs" />
     <Compile Include="PropRuleSingle.cs" />
     <Compile Include="QueryBuilder.cs" />
     <Compile Include="ReadOnlyDataSetProvider.cs">
