--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -74,6 +74,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL" />
     <Reference Include="MySql.Data, Version=6.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MySql.Data.dll</HintPath>
@@ -105,6 +106,8 @@
     <Compile Include="Address.cs" />
     <Compile Include="ArchitectureTest.cs" />
     <Compile Include="Asset.cs" />
+    <Compile Include="Base\Logging\TestLog4NetLogger.cs" />
+    <Compile Include="Base\Logging\TestLog4NetLoggerFactory.cs" />
     <Compile Include="Base\TestDateRange.cs" />
     <Compile Include="Base\TestDateRangeOptionsConverter.cs" />
     <Compile Include="Base\TestDateTimeNow.cs" />
