--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -148,6 +148,9 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
+	<Reference Include="System.Core, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.46.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\System.Data.SQLite.DLL</HintPath>
